crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__an_unconsumed_argument_is_reported.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{}\", path, code)] struct T\n    { path: String, code: u32, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = ::std::format!("{}", & (self.path));
}
::core::compile_error! {
    "`#[display(...)]` argument is not consumed by any `{}` placeholder"
}
