crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__an_unknown_placeholder_lists_the_available_fields.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"bad path: {pth}\")] struct T\n    {\n        path: String, code: u32, #[doc = \" ohno::generated-core@7f3d9c2a\"]\n        ohno_core: ohno::OhnoCore,\n    }\n})"
---
fn message() {
    let _ = "bad path: {}";
}
::core::compile_error! {
    "unknown field `pth` in `#[display(...)]`, available fields: `path`, `code`"
}
