crates/ohno_macros_impl/src/derive_error/display/snapshots/ohno_macros_impl__derive_error__display__tests__every_fault_in_one_template_is_reported_together.snap
---
source: crates/ohno_macros_impl/src/derive_error/display/mod/tests.rs
expression: "lowered(parse_quote!\n{\n    #[display(\"{one} {two}\", extra)] struct T\n    { path: String, inner: ohno::OhnoCore }\n})"
---
fn message() {
    let _ = "{} {}";
}
::core::compile_error! {
    "unknown field `one` in `#[display(...)]`, available fields: `path`, `inner`"
}
::core::compile_error! {
    "unknown field `two` in `#[display(...)]`, available fields: `path`, `inner`"
}
::core::compile_error! {
    "`#[display(...)]` argument is not consumed by any `{}` placeholder"
}
